<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_four_is_ten3"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MenuActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_menu_buttons_container"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_new_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@color/cardViewOperationBackground"
            android:textColor="@color/button_text_color"
            android:text="@string/new_game"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@color/cardViewOperationBackground"
            android:textColor="@color/button_text_color"
            android:text="@string/continue_the_game"
            app:layout_constraintTop_toBottomOf="@id/button_new_game"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_how_to_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@color/cardViewOperationBackground"
            android:textColor="@color/button_text_color"
            android:text="@string/how_to_play"
            app:layout_constraintTop_toBottomOf="@id/button_continue"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_levels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@color/cardViewOperationBackground"
            android:textColor="@color/button_text_color"
            android:text="@string/levels"
            app:layout_constraintTop_toBottomOf="@id/button_how_to_play"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@color/cardViewOperationBackground"
            android:textColor="@color/button_text_color"
            android:text="@string/about"
            app:layout_constraintTop_toBottomOf="@id/button_levels"
            app:layout_constraintLeft_toLeftOf="parent"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>